<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/land"
    tools:context="com.example.android.quizapp.ResultActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <pl.droidsonroids.gif.GifTextView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/earth1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thanks"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="5dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/userName"
            android:textSize="21sp"
            android:textAllCaps="true"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/isHappy"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourScoreIs"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:layout_marginLeft="7dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/learnMore"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/nasa"
            android:textColorLink="@color/Links"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/beforeTheFlood"
            android:textColorLink="@color/Links"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/nationalGeographic"
            android:textColorLink="@color/Links"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>
