<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperhunt01"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/Name"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/login_hint"
            android:layout_marginTop="6dp"
            android:background="@color/mainWhite"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/level_question"
            android:textSize="@dimen/textQuestion"
            android:textStyle="bold"
            android:gravity="center" />

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="40dp"
           android:layout_marginTop="6dp"
           android:background="@color/mainWhite"
           android:layout_gravity="center">
           <Spinner
               android:id="@+id/level_spinner"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_gravity="center"
               android:gravity="center"
               android:popupBackground="@color/spinnerBackGround">
           </Spinner>

       </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login_button"
            android:textSize="@dimen/textQuestion"
            android:textStyle="bold"
            android:background="@drawable/login_button"
            android:onClick="startQuiz"/>


     </LinearLayout>

</ScrollView>

